--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="link1" href="#">Продолжить</a>
             <a class="link2" href="#">Изменить телефонный код</a>
         </div>
-        <div class="buttons">
+        <!-- <div class="buttons">
             <button class="btn" ><span class="value">1</span><span class="opasity"></span></button>
             <button class="btn"><span>2</span><span>abc</span></button>
             <button class="btn" onclick="document.querySelector('.phone').value+=3"><span>3</span><span>def</span></button>
@@ -33,7 +33,7 @@
             <button class="btn">+ * #</button>
             <button class="btn" onclick="document.querySelector('.phone').value+=0"><span>0</span></button>
             <button class="btn"><span>x</span></button>
-        </div>
+        </div> -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
