--- a/index.html
+++ b/index.html
@@ -17,50 +17,14 @@
         <div class="phone-number">
             <span class="country">Казахстан</span>
             <input class="phone art-stranger" type="tel" id="phone" type="text" placeholder="+7 (___) ___-__-__">
+            <hr class="hr">
             <a class="link1" href="#">Продолжить</a>
-            <a class="link2" href="#">Изменить телефонный код</a>
+            <a class="link2" href="/">Изменить телефонный код</a>
         </div>
-        <!-- <div class="buttons">
-            <button class="btn" ><span class="value">1</span><span class="opasity"></span></button>
-            <button class="btn"><span>2</span><span>abc</span></button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=3"><span>3</span><span>def</span></button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=4"><span>4</span><span>ghi</span></button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=5"><span>5</span><span>jkl</span></button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=6"><span>6</span><span>mno</span></button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=7"><span>7</span><span>pqrs</span></button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=8"><span>8</span><span>tuv</span></button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=9"><span>9</span><span>wxyz</span></button>
-            <button class="btn">+ * #</button>
-            <button class="btn" onclick="document.querySelector('.phone').value+=0"><span>0</span></button>
-            <button class="btn"><span>x</span></button>
-        </div> -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-
     <script src="js/maska-nomera.js" type="text/javascript" ></script>
-
-    <script>
-$('.art-stranger').mask('+7 (999) 999-99-99');
-
-$.fn.setCursorPosition = function(pos) {
-if ($(this).get(0).setSelectionRange) {
-  $(this).get(0).setSelectionRange(pos, pos);
-} else if ($(this).get(0).createTextRange) {
-  var range = $(this).get(0).createTextRange();
-  range.collapse(true);
-  range.moveEnd('character', pos);
-  range.moveStart('character', pos);
-  range.select();
-}
-};
-
-
-$('input[type="tel"]').click(function(){
-  $(this).setCursorPosition(4);  // set position number
-});
-</script>
-
+    <script src="js/main.js"></script>
 </body>
 </html>
